Completed voice cloning section

--- a/useCases.html
+++ b/useCases.html
@@ -19,6 +19,24 @@
 	<div class = "mainContainer">
 		<div data-aos="fade-up" class = "useCaseContainer">
 			<h2> Voice Cloning</h2>
+			<p>Voice cloning is a technology that enables the replication of a person's voice. It involves capturing the unique characteristics of a person's speech patterns, intonations, and other vocal nuances and then synthesizing new speech that sounds like it's coming from that person.</p>
+			<h3> Websites or apps that have voice cloning functions</h3>
+			<ul>
+			  <li><a href="https://elevenlabs.io/voice-cloning">ElevenLabs</a></li>
+			  <li><a href="https://play.ht/voice-cloning/">Play Agents</a></li>
+			  <li><a href="https://speechify.com/voice-cloning/">Speechify</a></li>
+			</ul>
+			<h3> Listen to the original voice from a human!</h3>
+			<audio controls>
+			  	<source src="Audio/James's Original Voice.mp3" type="audio/mpeg">
+			  	Your browser does not support the audio element.
+			</audio>
+			<h3> Listen to the cloned voice generative by the ElevenLabs website!</h3>
+			<audio controls>
+			  	<source src="Audio/James's AI Cloned Voice.mp3" type="audio/mpeg">
+			  	Your browser does not support the audio element.
+			</audio>
+			<p> * These audios are from the ElevenLabs website. </p>
 		</div>
 
 		<div data-aos="fade-up" class = "useCaseContainer">
