Completed chatbots and image generation section

--- a/useCases.html
+++ b/useCases.html
@@ -17,10 +17,10 @@
 		</div>
 	</div>
 	<div class = "mainContainer">
-		<div data-aos="fade-up" class = "useCaseContainer">
+		<div data-aos="fade-up" class = "useCaseContainer useCase1">
 			<h2> Voice Cloning</h2>
 			<p>Voice cloning is a technology that enables the replication of a person's voice. It involves capturing the unique characteristics of a person's speech patterns, intonations, and other vocal nuances and then synthesizing new speech that sounds like it's coming from that person.</p>
-			<h3> Websites or apps that have voice cloning functions</h3>
+			<h3> Voice cloning websites</h3>
 			<ul>
 			  <li><a href="https://elevenlabs.io/voice-cloning">ElevenLabs</a></li>
 			  <li><a href="https://play.ht/voice-cloning/">Play Agents</a></li>
@@ -39,12 +39,36 @@
 			<p> * These audios are from the ElevenLabs website. </p>
 		</div>
 
-		<div data-aos="fade-up" class = "useCaseContainer">
+		<div data-aos="fade-up" class = "useCaseContainer useCase2">
 			<h2> Chatbots</h2>
+			<p> Chatbots are perhaps the most popular generative AI examples. A chatbot processes human conversation and interact with humans. They can be as simple as providing brief responses to straightforward questions, or as sophisticated as digital assistants that offering more personalized interactions.</p>
+			<h3> Popular chatbots</h3>
+			<ul>
+			    <li><a href="https://chat.openai.com/">ChatGPT</a></li>
+			    <li><a href="https://gemini.google.com/">Google Gemini</a></li>
+			  	<li><a href="https://claude.ai/">Claude</a></li>
+			</ul>
+			<h3> ChatBots are so smart that they can write simple code! </h3>
+			<div class="chatBotImgContainer">
+			  <img src="Img/chatBot.png" alt="ChatBot" id = "chatBotImg">
+			</div>
 		</div>
 
-		<div data-aos="fade-up" class = "useCaseContainer">
+		<div data-aos="fade-up" class = "useCaseContainer useCase3">
 			<h2> Image Generation</h2>
+			<p> AI image generation can create images from nothing or change existing ones based on deep learning algorithms. It is becoming prevalent on social media.</p>
+			<h3> Popular image generation websites</h3>
+			<ul>
+			    <li><a href="https://openai.com/dall-e-2">DALL·E</a></li>
+			    <li><a href="https://www.canva.com/ai-image-generator/">Canva</a></li>
+			  	<li><a href="https://deepai.org/machine-learning-model/text2img">Deep AI</a></li>
+			</ul>
+			<h3> See what DALL·E can generate! </h3>
+			<p> Prompt: a photo of a happy corgi puppy sitting and facing forward, studio light, longshot</h3>
+			<p> Output: </p>
+			<div class="imgGenerationImgContainer">
+			  <img src="Img/imgGeneration.jpeg" alt="AI mage generation" id = "imgGenerationImge">
+			</div>
 		</div>
 
 		<div data-aos="fade-up" class = "useCaseContainer">
