--- a/useCases.html
+++ b/useCases.html
@@ -20,12 +20,6 @@
 		<div data-aos="fade-up" class = "useCaseContainer useCase1">
 			<h2> Voice Cloning</h2>
 			<p>Voice cloning is a technology that enables the replication of a person's voice. It involves capturing the unique characteristics of a person's speech patterns, intonations, and other vocal nuances and then synthesizing new speech that sounds like it's coming from that person.</p>
-			<h3> Voice cloning websites</h3>
-			<ul>
-			  <li><a href="https://elevenlabs.io/voice-cloning">ElevenLabs</a></li>
-			  <li><a href="https://play.ht/voice-cloning/">Play Agents</a></li>
-			  <li><a href="https://speechify.com/voice-cloning/">Speechify</a></li>
-			</ul>
 			<h3> Listen to the original voice from a human!</h3>
 			<audio controls>
 			  	<source src="Audio/James's Original Voice.mp3" type="audio/mpeg">
@@ -37,42 +31,62 @@
 			  	Your browser does not support the audio element.
 			</audio>
 			<p> * These audios are from the ElevenLabs website. </p>
+			<h3> Voice cloning websites</h3>
+			<ul>
+			  <li><a href="https://elevenlabs.io/voice-cloning">ElevenLabs</a></li>
+			  <li><a href="https://play.ht/voice-cloning/">Play Agents</a></li>
+			  <li><a href="https://speechify.com/voice-cloning/">Speechify</a></li>
+			</ul>
 		</div>
 
 		<div data-aos="fade-up" class = "useCaseContainer useCase2">
 			<h2> Chatbots</h2>
 			<p> Chatbots are perhaps the most popular generative AI examples. A chatbot processes human conversation and interact with humans. They can be as simple as providing brief responses to straightforward questions, or as sophisticated as digital assistants that offering more personalized interactions.</p>
+			<h3> ChatBots are so smart that they can write simple code! </h3>
+			<div class="chatBotImgContainer">
+			  <img src="Img/chatBot.png" alt="ChatBot" id = "chatBotImg">
+			</div>
 			<h3> Popular chatbots</h3>
 			<ul>
 			    <li><a href="https://chat.openai.com/">ChatGPT</a></li>
 			    <li><a href="https://gemini.google.com/">Google Gemini</a></li>
 			  	<li><a href="https://claude.ai/">Claude</a></li>
 			</ul>
-			<h3> ChatBots are so smart that they can write simple code! </h3>
-			<div class="chatBotImgContainer">
-			  <img src="Img/chatBot.png" alt="ChatBot" id = "chatBotImg">
-			</div>
 		</div>
 
 		<div data-aos="fade-up" class = "useCaseContainer useCase3">
 			<h2> Image Generation</h2>
 			<p> AI image generation can create images from nothing or change existing ones based on deep learning algorithms. It is becoming prevalent on social media.</p>
+			<h3> See what DALL·E can generate! </h3>
+			<p> Prompt: a photo of a happy corgi puppy sitting and facing forward, studio light, longshot</h3>
+			<p> Output: </p>
+			<div class="imgGenerationImgContainer">
+			  <img src="Img/imgGeneration.jpeg" alt="AI image generation" id = "imgGenerationImage">
+			</div>
 			<h3> Popular image generation websites</h3>
 			<ul>
 			    <li><a href="https://openai.com/dall-e-2">DALL·E</a></li>
 			    <li><a href="https://www.canva.com/ai-image-generator/">Canva</a></li>
 			  	<li><a href="https://deepai.org/machine-learning-model/text2img">Deep AI</a></li>
 			</ul>
-			<h3> See what DALL·E can generate! </h3>
-			<p> Prompt: a photo of a happy corgi puppy sitting and facing forward, studio light, longshot</h3>
-			<p> Output: </p>
-			<div class="imgGenerationImgContainer">
-			  <img src="Img/imgGeneration.jpeg" alt="AI mage generation" id = "imgGenerationImge">
-			</div>
 		</div>
 
-		<div data-aos="fade-up" class = "useCaseContainer">
+		<div data-aos="fade-up" class = "useCaseContainer useCase4">
 			<h2> Video Generation</h2>
+			<p> AI video generation is using computers to make videos or change existing ones. It can create new videos, make them look better, or even edit them automatically.</p>
+			<h3> Watch this video created by Sora, the AI video generator!</h3>
+			<div class="videoGenerationVideoContainer">
+			    <video id = "videoGenerationVideo" controls>
+				    <source src="Video/videoGeneration.mp4" type="video/mp4">
+				    Your browser does not support the video tag.
+				</video>
+			</div>
+			<h3> Popular video generation websites</h3>
+			<ul>
+			    <li><a href="https://openai.com/sora">Sora</a></li>
+			    <li><a href="https://invideo.io/make/ai-video-generator/">Invideo AI</a></li>
+			  	<li><a href="https://www.synthesia.io/">Synthesia</a></li>
+			</ul>
 		</div>
 	</div>
 
