Completed half of the social media page

--- a/socialMedia.html
+++ b/socialMedia.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Generative AI</title>
+	<title>Social Media</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,19 +17,26 @@
 	</div>
 
 	<div class = "mainContainer">
-		<div class = "topicContainer">
-			<h1 class="topic">
-		  		<span class="text-wrapper">
-		    		<span class="letters">Generative AI</span>
-		  		</span>
-			</h1>
+		<div class = "socialTop">
+			<div class="newsImageContainer">
+				<img src="Img/news1.png" alt="News 1" id = "socialImg1">
+				<img src="Img/news3.png" alt="News 2" id = "socialImg2">
+				<img src="Img/news2.png" alt="News 3" id = "socialImg3">
+			</div>
+
+			<div class = "socialMediaTextContainer">
+				<h2 class="socialMediaText">
+				  <p><span class="word">AI influencers are reshaping online trends.</span></p>
+				  <p><span class="word">Meet some influencers!</span></p>
+				</h2>
+			</div>
 		</div>
-		<div id = "intro">
-			<p> <span class = "highlight">Do you know </span> generative AI is transforming how we engage with the Internet? Generative AI is a type of artificial intelligence technology that can create new content, including images, text, and audio, based on patterns and data it has been trained on. Some popular applications are chatGPT, Github Copilot, and Sora.</p>
+
+		<div id = "insAccGrid">
 		</div>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	<script src="scriptIndex.js"></script>
+	<script src="scriptSocialMedia.js"></script>
 </body>
 </html>
