--- a/useCases.html
+++ b/useCases.html
@@ -12,7 +12,7 @@
 		<div class = "navLinks">
 			<div class = "navlink"><a href = "index.html"> Home </a></div>
 			<div class = "navlink"><a href = "useCases.html"> Use cases </a></div>
-			<div class = "navlink"><a href = ""> Social Media </a></div>
+			<div class = "navlink"><a href = "socialMedia.html"> Social Media </a></div>
 			<div class = "navlink"><a href = ""> Impact and Concern </a></div>
 		</div>
 	</div>
@@ -89,9 +89,7 @@
 			</ul>
 		</div>
 	</div>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script src="script.js"></script>
+	<script src="scriptUseCases.js"></script>
 </body>
 </html>
