Completed website without media query

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class = "navlink"><a href = "index.html"> Home </a></div>
 			<div class = "navlink"><a href = "useCases.html"> Use cases </a></div>
 			<div class = "navlink"><a href = "socialMedia.html"> Social Media </a></div>
-			<div class = "navlink"><a href = ""> Impact and Concern </a></div>
+			<div class = "navlink"><a href = "impactConcern.html"> Impact and Concern </a></div>
 		</div>
 	</div>
 
